--- a/server/package.json
+++ b/server/package.json
@@ -1,20 +1,23 @@
 {
-  "name": "stickndip",
+  "name": "zoom-clone",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "ejs": "^3.1.3",
+    "express": "^4.17.1",
+    "peer": "^1.0.1",
+    "socket.io": "^2.3.0",
+    "uuid": "^8.1.0"
   },
   "devDependencies": {
-    "dotenv": "^16.3.1",
-    "nodemon": "^3.0.1"
+    "nodemon": "^2.0.4"
   }
 }
